# switchboard-plug-network

./: .travis.yml  AUTHORS  CMakeLists.txt  INSTALL  README.md  build.sh  meson.build  meson_options.txt
.github/workflows/: main.yml
cmake/: Translations.cmake
data/: CMakeLists.txt  io.elementary.switchboard.network.appdata.xml.in  io.elementary.switchboard.network.policy.in  meson.build  network.metainfo.xml.in  org.pantheon.switchboard.networking.policy.cmake  org.pantheon.switchboard.networking.policy.xml
debian/: changelog  control  copyright  rules
po/: CMakeLists.txt  POTFILES  aa.po  af.po  ak.po  am.po  ar.po  av.po  az.po  ba.po  be.po  bg.po  bm.po  bn.po  bs.po  ca.po  ckb.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fj.po  fo.po  fr.po  fr_CA.po  gd.po  gl.po  gn.po  he.po  hi.po  ho.po  (+76 more)
po/extra/: LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  (+160 more)
src/: CMakeLists.txt  MainView.vala  NetworkManager.vala  Plug.vala  UbuntuSystemService.vala  Utils.vala  libnm-gtk.vapi  meson.build  rfkill.vala
src/Settings/: ProxySettings.vala  SystemServiceProxyBus.vala
src/Views/: EthernetPage.vala  HotspotPage.vala  ModemPage.vala  ProxyPage.vala  VPNPage.vala  WifiPage.vala
src/Widgets/: DeviceItem.vala  DeviceList.vala  DevicePage.vala  EtherInterface.vala  EthernetPage.vala  Footer.vala  HotspotInterface.vala  InfoBox.vala  InfoFrame.vala  InfoScreen.vala  Item.vala  MainView.vala  ModemInterface.vala  NMVisualizer.vala  Page.vala  ProxyPage.vala  SettingsButton.vala  VPNInfoBox.vala  VPNInterface.vala  VPNPage.vala  WiFiEntry.vala  WiFiPage.vala  WidgetNMInterface.vala  WifiInterface.vala  WifiMenuItem.vala
src/Widgets/Device/: DeviceItem.vala  DeviceList.vala  DevicePage.vala
src/Widgets/Hotspot/: HotspotDialog.vala  HotspotPage.vala
src/Widgets/Proxy/: ProxyConfigurationPage.vala  ProxyExceptionsPage.vala  ProxyItem.vala  ProxyPage.vala
src/Widgets/VPN/: VPNConnectionDialog.vala  VPNInfoDialog.vala  VPNInfoLabel.vala  VPNMenuItem.vala  VPNPage.vala
src/Widgets/WiFi/: WiFiEntry.vala  WiFiPage.vala
src/common/: Device.vala  DeviceManager.vala  Utils.vala  rfkill.vala
src/common/Widgets/: AbstractEtherInterface.vala  AbstractHotspotInterface.vala  AbstractModemInterface.vala  AbstractVPNInterface.vala  AbstractWifiInterface.vala  NMVisualizer.vala  VPNMenuItem.vala  WidgetNMInterface.vala  WifiMenuItem.vala
vapi/: NMA-1.0.metadata  libnm.vapi  libnma.vapi
